# fishing-analyzer

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  LICENSE  Pipfile  README.md  config.py  dash_main_app.py  data_aggregation.py  data_processing.py  data_visualization.py  docker-compose.yml  index.py  install.py  mainapp.py  output_arff.csv  pyproject.toml  requirements.txt  run.py  run_app.py  settings.py  utils.py
.github/workflows/: build-binaries.yml  ci-binary.yml  ci-build.yml  ci-lint.yml  ci-tests.yml  ci-typecheck.yml  ci.yml  publish-to-pypi.yml
apps/: add.py  adddata.py  addfish.py  distributions.py  environment.py  histograms.py  insert.py  mainpage.py  statistics.py  utils.py
apps/data/: environment.py  statistics.py
apps/navigation/: header.py
apps/visualisation/: environmental_data.py  month_statistics.py
container/: air_temperature.py  custom_logger.py  data_cache.py  water_temperature.py
dash_apps/: environmental_data.py  environmental_data_app.py  month_statistics.py  month_statistics_app.py
data/: __init__.py  __version__.py  cache.py  model.py
data/cache/: __init__.py  cache.py  store.cache.bak  store.cache.dir  water_temperature.cache
data/environment/: __init__.py  air_temperature.py  base_attribute.py  ground_temperature.py  precipitation_amount.py  precipitation_amount_day.py  record_date_hour.py  relative_humidity.py  sun_hours.py  sun_minutes.py  sun_minutes_day.py  water_temperature.py  wind_direction.py  wind_strength.py
data/fish/: __init__.py  catch_date.py  catch_hour.py  catch_month.py  fish_database.csv  fish_type.py
dataset/: air_temperature.py  data_cache.py  ground_temperature.py  precipitation_amount.py  record_date_hour.py  relative_humidity.py  sun_hours.py  water_temperature.py  wind_direction.py  wind_strength.py
docker/: Dockerfile  entrypoint.sh
docs/: development.md  git-workflow.md  release.md
environment_data/: air_temperature.py  data_cache.py  ground_temperature.py  precipitation_amount.py  record_date_hour.py  relative_humidity.py  sun_hours.py  water_temperature.py  wind_direction.py  wind_strength.py
examples/: basic_usage.py
fish_data/: catch_date.py  catch_hour.py  catch_month.py  fish_type.py
fishdata/: catch_date.py  catch_hour.py  catch_month.py  fish_type.py
old/: old_data_processing.py  output_data_set.arff
old/presentation/: abschluss 2017.odp
old/weka/: weka_models_new - 20bins - standartize.arff  weka_models_new - 20bins.arff
rohdaten/: fangbuch_gesamt.csv
src/fishing_analyzer/: config.py  install.py  mainapp.py  run.py  utils.py
static/: custom_style
tests/unit/: test_config.py  test_utils.py  test_web_dashboard_service.py  test_web_main.py
tools/: export_csv.py  histograms.py  import_db.py
weather_data/ground_temperature/: Metadaten_Parameter_eb_stunde_00282.txt
weather_data/precipitation_amount/: Metadaten_Geographie_00282.txt  Metadaten_Parameter_rr_stunde_00282.html
weather_data/relativ_humidity_air_temperature/: Metadaten_Geraete_Lufttemperatur_00282.html
weather_data/sun_hours/: Metadaten_Parameter_sd_stunde_00282.html
weather_data/wind_strength/: Metadaten_Geraete_Windrichtung_00282.html  Metadaten_Geraete_Windrichtung_00282.txt
weather_data_cache/: precipitation_amount.cache  sun_hours.cache  water_temperature.cache
weka/arff_dateien/: 2 - Fangbuch Gesamt - balanced.arff  Fangbuch Gesamt - bin10.arff  Fangbuch Gesamt - bin30.arff  Fangbuch Gesamt - merged - normalized - resample - attributes.arff  (+1 more)
weka/arff_files/: 2 - Fangbuch Gesamt - bin20.arff  (+6 more)
(+265 files in other folders)
