[project]
name = "fishing-analyzer"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "colorlover",
    "plotly",
    "flask",
    "dash",
    "scipy",
    "pymongo",
    "pandas",
    "dash-html-components",
    "dash-core-components",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pytest>=7.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = ["E203", "E501", "E402", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
