[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishing-analyzer"
version = "0.2.0"
description = "Analyze fish catches against environmental factors"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Fishing Analyzer Contributors" },
]
dependencies = [
    "numpy>=1.26,<3",
    "colorlover>=0.3.0,<1",
    "plotly>=5.24,<7",
    "flask>=3.0,<4",
    "dash>=2.18,<4",
    "dash-core-components>=2.0.0,<3",
    "dash-html-components>=2.0.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "jinja2>=3.1,<4",
    "scipy>=1.11,<2",
    "pymongo>=4.10,<5",
    "pandas>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0,<1",
    "mypy>=1.14,<2",
    "pytest>=8.0,<9",
    "pytest-cov>=5,<7",
    "httpx>=0.28,<1",
    "black>=24.10,<26",
    "flake8>=7.1,<8",
    "pre-commit>=4.0,<5",
    "build>=1.2,<2",
    "twine>=5.1,<7",
    "pyinstaller>=6.11,<7",
]

[project.scripts]
fishing-analyzer = "fishing_analyzer.web.main:run"
fishing-analyzer-legacy = "fishing_analyzer.run:main"
fishing-analyzer-install = "fishing_analyzer.install:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fishing_analyzer.data" = ["fish_database.csv"]
"fishing_analyzer.data.environment" = ["raw_data/**/*.csv", "raw_data/**/*.txt", "raw_data/**/*.html"]
"fishing_analyzer.web" = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E203", "E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src/fishing_analyzer",
    "--cov-report=term-missing",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
